Complete basic mobile structure

--- a/dev/sass/base/_color.sass
+++ b/dev/sass/base/_color.sass
@@ -1,3 +1,9 @@
 // colors
-$brandColor     : #123456
+$brandColor     : #222
 $baseBlue       : #046380
+
+$baseGray       : #333
+
+$baseOrange     : #ff4747
+
+$linkBlue       : #08C
