--- a/dev/sass/base/_variables.sass
+++ b/dev/sass/base/_variables.sass
@@ -1,1 +1,7 @@
 $golden-ratio: 1.618
+
+
+// backgrounds
+$darkgraynoise  : "../images/darkgraynoise.png"
+$lightgraynoise : "../images/lightgraynoise.png"
+$sandnoise      : "../images/sandnoise.png"
