--- a/dev/sass/frameworks/_grid-settings.sass
+++ b/dev/sass/frameworks/_grid-settings.sass
@@ -8,8 +8,7 @@ $max-width     : em(1088)
 
 
 // breakpoints
-$mobile         : new-breakpoint(max-width 48em 4)
-$small-tablet   : new-breakpoint(min-width 60em 8)
-$large-tablet   : new-breakpoint(min-width 76em 8)
-$desktop        : new-breakpoint(min-width 100em 12)
-$desktop-large  : new-breakpoint(min-width 130em 12)
+$mobile         : new-breakpoint(max-width 480px)
+$tablet         : new-breakpoint(min-width 640px)
+$desktop        : new-breakpoint(min-width 1024px 12)
+$desktop-large  : new-breakpoint(min-width 1200em 12)
