--- a/dev/sass/modules/_typography.sass
+++ b/dev/sass/modules/_typography.sass
@@ -1,48 +1,59 @@
-// google font
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,900,700)
+// google fonts
+//@import url(http://fonts.googleapis.com/css?family=Merriweather:300,400,700,900)
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700)
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700)
 
 // define typographic variables
-$body-font-size      : 62.5% !default
+$body-font-size      : em(14) !default
 $body-line-height    : golden-ratio(1em, 1) !default
-$body-font-family    : "Helvetica Neue", sans-serif !default
-$heading-font-family : "Helvetica Neue", sans-serif !default
+$body-font-family    : "Open Sans", "Helvetica Neue", sans-serif !default
+$heading-font-family : "Open Sans Condensed", "Open Sans", "Helvetica Neue", sans-serif !default
+$code-font-family    : "Monaco", monospace
 
 // base
 body
   font: $body-font-size $body-font-family
   line-height: $body-line-height
-a, a:visited
+a
   text-decoration: none
-  color: $baseBlue
+  color: lighten($linkBlue, 10%)
   +transition(color .5s)
+  &:visited
+    color: #96B7E9
   &:hover
-    color: lighten($baseBlue, 10%)
+    color: $linkBlue
 button, input
   font-family: $body-font-family
 
 // headings
 h1,h2,h3,h4,h5,h6
+  font-family: $heading-font-family
+  text-transform: uppercase
   line-height: $golden-ratio + em
-  margin-bottom: $golden-ratio/2 + em
   text-shadow: 0px 1px 3px rgba(0,0,0,.1)
-h1
-  font-size: 260%
-  line-height: 1.4em
-h2
-  font-size: 240%
-h3
-  font-size: 220%
-h4
-  font-size: 200%
-h5
-  font-size: 180%
-h6
-  font-size: 160%
 
 // paragraphs
 p
-  font-size: 160%
-  padding-bottom: $body-line-height/2
+  font-size: em(17)
+  line-height: em(26)
+  font-weight: 400
+  padding-bottom: em(25)
+  a
+    padding-bottom: 2px
+    border-bottom: 1px dotted lighten($linkBlue, 10%)
+    font-weight: 700
+  span.run-in
+    text-transform: capitalize
+    font-weight: 700
+    letter-spacing: 1px
   &.intro
-    font-size: 180%
-    line-height: $golden-ratio + em
+    line-height: em(27)
+    font-size: em(18)
+
+pre
+  background: #2b2b2b
+  padding: em(20)
+  margin-bottom: em(20)
+code
+  display: block
+  color: #eee
