Add styles for tablet portrait

--- a/dev/sass/frameworks/_grid-settings.sass
+++ b/dev/sass/frameworks/_grid-settings.sass
@@ -4,11 +4,12 @@
 $column        : 90px
 $gutter        : 30px
 $grid-columns  : 12
-$max-width     : em(1088)
+$max-width     : 1024px
 
 
 // breakpoints
 $mobile         : new-breakpoint(max-width 480px)
-$tablet         : new-breakpoint(min-width 640px)
+$tablet         : new-breakpoint(min-width 640px 3)
+$tablet2        : new-breakpoint(min-width 1000px 3)
 $desktop        : new-breakpoint(min-width 1024px 12)
 $desktop-large  : new-breakpoint(min-width 1200em 12)
