--- a/dev/sass/modules/_buttons.sass
+++ b/dev/sass/modules/_buttons.sass
@@ -8,6 +8,8 @@
 button.nav-toggle
   @extend %toggle-button
   margin-bottom: 0px
+  +media($tablet2)
+    display: none
 
 button.search-toggle
   @extend %toggle-button
