--- a/dev/sass/base/_reset.sass
+++ b/dev/sass/base/_reset.sass
@@ -91,8 +91,7 @@ pre, code, kbd, samp
 // Improves readability of pre-formatted text in all browsers
 pre
   white-space: pre
-  white-space: pre-wrap
-  word-wrap: break-word
+  word-wrap: normal
 
 // Addresses quote property not supported in S4
 blockquote, q
