--- a/dev/sass/layouts/_navigation.sass
+++ b/dev/sass/layouts/_navigation.sass
@@ -1,54 +1,71 @@
-header#primary-header
+#primary-header
   background: url($darkgraynoise)
-  //background: #313131
   text-align: center
-  margin: 0 0 em($mobilegutter) 0
   color: #ddd
   +box-shadow(0px 0px 15px rgba(0,0,0,.25))
-a#brand
+  margin: 0 0 $mobilegutter 0
+  +media($tablet)
+    margin: 0 0 20px 0
+  +media($tablet2)
+    margin: 0 0 40px 0
+
+
+#brand
   color: #ddd
   &:hover, &:active
     color: #fff
   hgroup
-    padding: em(30) 0
-    margin: 0 em(10)
+    padding: 30px 0
+    margin: 0 10px
+    +media($tablet)
+      padding: 50px 0
     h1
-      font-size: em(32)
+      font-size: 24px
       font-weight: 300
-      line-height: em(18)
-      margin: 0 0 em(5) 0
+      line-height: 22px
+      margin: 0 0 5px 0
     h3
-      font-size: em(15)
+      font-size: 12px
       font-weight: 300
-      letter-spacing: em(1)
+      letter-spacing: 1px
       color: #aaa
 
-nav#menu
+#menu
   display: none
-  padding-bottom: em(0)
+  padding-bottom: 0
+  +media($tablet2)
+  display: inline
   ul
-    text-align: left
-    margin: 0 em(20) em(20) em(20)
+    text-align: center
+    margin: 0 20px 20px 20px
     +box-shadow(0px 0px 15px rgba(0,0,0,.25))
+    +media($tablet)
+      margin: -20px 240px 40px 240px
+    +media($tablet2)
+      //margin: -20px 340px 40px 340px
+      text-align: left
+      margin: 0
     li
       border-bottom: 1px solid #222
       a
-        padding: em(8) em(14) em(8) em(14)
+        padding: 8px 14px
         color: #999
         font-weight: 400
-        font-size: em(18)
+        font-size: 14px
         font-family: $body-font-family
         background: #262626
         display: block
         +transition(all .5s)
+        +media($tablet2)
+          padding: 10px 14px
         &.current, &:hover, &:active
           background: #151515
           color: #eee
 
-div.search
+.search
   display: none
-  padding: em(10) em(0)
-  font-size: em(14)
+  padding: 6px 0
+  font-size: 12px
   background: #fff
   //border-bottom: 4px solid #222
   +clearfix
@@ -57,7 +74,7 @@ div.search
     width: 70%
     border-radius: 0
     background: #fff
-    padding: em(10) em(15) em(10) em(15)
+    padding: 10px 15px
     float: left
   button
     background: #333
@@ -65,5 +82,5 @@ div.search
     border-left: 10px solid #fff
     color: #eee
     width: 30%
-    padding: em(10) em(14)
+    padding: 10px 14px
     float: right
