--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:300,400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
@@ -613,7 +613,7 @@ mark { background: yellow; color: black; }
 
 pre, code, kbd, samp { font-family: monospace, serif; _font-family: "courier new", monospace; font-size: 1em; }
 
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
+pre { white-space: pre; word-wrap: normal; }
 
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after { content: ""; content: none; }
@@ -665,74 +665,115 @@ input:focus, textarea:focus { outline: 0; }
 button.nav-toggle, button.search-toggle { color: #eeeeee; font-size: 1.6em; padding: 0.125em 0.375em 0.25em 0.375em; background: #222222; border: 0; }
 
 button.nav-toggle { margin-bottom: 0px; }
+@media screen and (min-width: 1000px) { button.nav-toggle { display: none; } }
 
-body { font: 0.875em "Open Sans", "Helvetica Neue", sans-serif; line-height: 1.618em; }
+body { font: 14px "Merriweather", "Helvetica Neue", sans-serif; line-height: 1.618em; }
 
 a { text-decoration: none; color: #00aaff; -webkit-transition: color 0.5s; -moz-transition: color 0.5s; -ms-transition: color 0.5s; -o-transition: color 0.5s; transition: color 0.5s; }
 a:visited { color: #96b7e9; }
 a:hover { color: #0088cc; }
 
-button, input { font-family: "Open Sans", "Helvetica Neue", sans-serif; }
+button, input { font-family: "Merriweather", "Helvetica Neue", sans-serif; }
 
-h1, h2, h3, h4, h5, h6 { font-family: "Open Sans Condensed", "Open Sans", "Helvetica Neue", sans-serif; text-transform: uppercase; line-height: 1.618em; text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); }
+h1, h2, h3, h4, h5, h6 { font-family: "Merriweather", "Helvetica Neue", sans-serif; line-height: 1.618em; text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); }
 
-p { font-size: 1.0625em; line-height: 1.625em; font-weight: 400; padding-bottom: 1.5625em; }
-p a { padding-bottom: 2px; border-bottom: 1px dotted #00aaff; font-weight: 700; }
+p { font-size: 14px; line-height: 23px; font-weight: 400; padding-bottom: 25px; }
+@media screen and (min-width: 640px) { p { font-size: 15px; line-height: 26px; font-weight: 400; } }
+p a { padding-bottom: 2px; border-bottom: 1px dotted #99ddff; }
 p span.run-in { text-transform: capitalize; font-weight: 700; letter-spacing: 1px; }
-p.intro { line-height: 1.6875em; font-size: 1.125em; }
 
-pre { background: #2b2b2b; padding: 1.25em; margin-bottom: 1.25em; }
+pre { background: #eeeeee; padding: 20px; margin-bottom: 25px; overflow-x: auto; white-space: pre; color: #787878; word-wrap: normal; }
+@media screen and (min-width: 640px) { pre { font-size: 16px; } }
 
-code { display: block; color: #eeeeee; }
+body { background: url("../images/lightgraynoise.png"); color: #444444; z-index: 0; }
 
-body { background: url("../images/sandnoise.png"); }
+.slides li img { max-height: 300px; }
 
-#wrap { width: 100%; padding: 0.625em 0.625em 2.5em 0.625em; }
-@media screen and (min-width: 640px) { #wrap { padding: 0; *zoom: 1; max-width: 68em; margin-left: auto; margin-right: auto; }
-  #wrap:before, #wrap:after { content: " "; display: table; }
-  #wrap:after { clear: both; } }
+#wrap { width: 100%; padding: 10px 10px 40px 10px; position: relative; border-bottom: 1px solid white; z-index: 0; }
+@media screen and (min-width: 640px) { #wrap { padding: 20px; } }
+@media screen and (min-width: 1000px) { #wrap { padding: 40px; } }
 
-article.post { -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07); background: white; margin: 0em 0em 0.625em 0em; padding: 0em 0em 2.5em 0em; }
-@media screen and (min-width: 640px) { article.post { margin: 1.25em 0em 2.5em 0em; } }
-article.post div.featured-image { padding-bottom: 0; }
-article.post div.featured-image .flex-control-nav { visibility: hidden; }
-@media screen and (min-width: 640px) { article.post div.featured-image .flex-control-nav { visibility: visible; } }
-article.post div.post-content { padding: 0em 1.5625em; *zoom: 1; }
-article.post div.post-content:before, article.post div.post-content:after { content: " "; display: table; }
-article.post div.post-content:after { clear: both; }
-article.post div.post-content header { text-align: center; margin: 2.5em 0 2.1875em 0; *zoom: 1; }
-article.post div.post-content header:before, article.post div.post-content header:after { content: " "; display: table; }
-article.post div.post-content header:after { clear: both; }
-article.post div.post-content header a h1 { font-weight: 700; font-size: 2em; line-height: 1.375em; color: #333333; }
-article.post div.post-content header a.date { font-size: 1em; font-weight: 700; font-family: "Open Sans Condensed", "Open Sans", "Helvetica Neue", sans-serif; text-transform: uppercase; display: block; margin-bottom: 1.5625em; color: #c3c9d2; }
+#wrap:after, #wrap:before { top: 100%; border: solid transparent; content: " "; height: 0; width: 0; position: absolute; pointer-events: none; z-index: 1; }
 
-.read-more { display: block; text-align: center; padding: 0.625em; margin: 0.625em 0; font-size: 1em; }
+#wrap:after { border-top-color: #eaeaea; border-width: 38px; left: 50%; margin-left: -38px; z-index: 2; }
 
-header#primary-header { background: url("../images/darkgraynoise.png"); text-align: center; margin: 0 0 0.625em 0; color: #dddddd; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); }
+#wrap:before { border-color: rgba(245, 245, 245, 0); border-top-color: #cccccc; border-width: 44px; margin-top: 1px; left: 50%; margin-left: -44px; z-index: 1; }
 
-a#brand { color: #dddddd; }
-a#brand:hover, a#brand:active { color: white; }
-a#brand hgroup { padding: 1.875em 0; margin: 0 0.625em; }
-a#brand hgroup h1 { font-size: 2em; font-weight: 300; line-height: 1.125em; margin: 0 0 0.3125em 0; }
-a#brand hgroup h3 { font-size: 0.9375em; font-weight: 300; letter-spacing: 0.0625em; color: #aaaaaa; }
+.post { -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07); background: url("../images/whitenoise.png"); margin: 0 0 10px 0; padding: 0 0 40px 0; }
+@media screen and (min-width: 640px) { .post { margin: 0 0 20px 0; } }
+@media screen and (min-width: 1000px) { .post { margin: 0 0 40px 0; } }
 
-nav#menu { display: none; padding-bottom: 0em; }
-nav#menu ul { text-align: left; margin: 0 1.25em 1.25em 1.25em; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); }
-nav#menu ul li { border-bottom: 1px solid #222222; }
-nav#menu ul li a { padding: 0.5em 0.875em 0.5em 0.875em; color: #999999; font-weight: 400; font-size: 1.125em; font-family: "Open Sans", "Helvetica Neue", sans-serif; background: #262626; display: block; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -ms-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
-nav#menu ul li a.current, nav#menu ul li a:hover, nav#menu ul li a:active { background: #151515; color: #eeeeee; }
+.featured-image { padding-bottom: 0; overflow: hidden; }
+.featured-image .flex-control-nav { visibility: hidden; }
+@media screen and (min-width: 640px) { .featured-image .flex-control-nav { visibility: visible; } }
 
-div.search { display: none; padding: 0.625em 0em; font-size: 0.875em; background: white; *zoom: 1; }
-div.search:before, div.search:after { content: " "; display: table; }
-div.search:after { clear: both; }
-div.search input { border: 0; width: 70%; border-radius: 0; background: white; padding: 0.625em 0.9375em 0.625em 0.9375em; float: left; }
-div.search button { background: #333333; border: 0; border-left: 10px solid white; color: #eeeeee; width: 30%; padding: 0.625em 0.875em; float: right; }
+.post-content { padding: 0 20px; *zoom: 1; }
+.post-content:before, .post-content:after { content: " "; display: table; }
+.post-content:after { clear: both; }
+@media screen and (min-width: 640px) { .post-content { padding: 0 80px; } }
+@media screen and (min-width: 1000px) { .post-content { padding: 0 140px; } }
+.post-content header { text-align: center; margin: 40px 0 25px 0; *zoom: 1; }
+.post-content header:before, .post-content header:after { content: " "; display: table; }
+.post-content header:after { clear: both; }
+@media screen and (min-width: 640px) { .post-content header { margin: 70px 0 35px 0; } }
+.post-content header a h1 { font-weight: 700; font-size: 22px; line-height: 30px; margin: 15px; color: #434343; }
+@media screen and (min-width: 640px) { .post-content header a h1 { margin-bottom: 10px; line-height: 36px; font-size: 26px; } }
+.post-content header .date { font-size: 12px; font-weight: 400; font-family: "Merriweather", "Helvetica Neue", sans-serif; display: block; color: #c3c9d2; }
 
-footer#primary-footer { background: url("../images/darkgraynoise.png"); color: #dddddd; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); }
-footer#primary-footer h4 { color: #eeeeee; font-weight: 900; font-size: 0.875em; padding-bottom: 0.625em; }
+.read-more { display: block; text-align: center; padding: 10px; margin: 10px 0 40px 0; font-size: 13px; color: #00aaff; }
+.read-more:hover, .read-more:active, .read-more:focus { color: #0088cc; }
+@media screen and (min-width: 640px) { .read-more { font-size: 16px; margin: 20px 0 50px 0; } }
 
-div#footer-widgets { padding: 1.875em 1.5625em; }
-div#footer-widgets div.textwidget { line-height: 1.625em; }
+.post-details { font-size: 12px; color: #a6afbc; text-shadow: none; margin: 0 auto; *zoom: 1; }
+.post-details:before, .post-details:after { content: " "; display: table; }
+.post-details:after { clear: both; }
+.post-details h5 { color: #566273; }
+.post-details i { font-size: 16px; }
+.post-details a { color: #c3c9d2; }
+.post-details a:hover, .post-details a:active, .post-details a:focus { color: #566273; }
+.post-details div { margin-bottom: 10px; }
+@media screen and (min-width: 640px) { .post-details div { display: block; float: left; margin-right: 9.09091%; width: 27.27273%; }
+  .post-details div:last-child { margin-right: 0; } }
 
-a[href="#top"] { margin: 0.9375em 0 0 0; display: block; text-align: center; color: #cccccc; font-size: 2.5em; }
-a[href="#top"]:hover, a[href="#top"]:active { color: #aaaaaa; }
+#primary-header { background: url("../images/darkgraynoise.png"); text-align: center; color: #dddddd; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); margin: 0 0 10px 0; }
+@media screen and (min-width: 640px) { #primary-header { margin: 0 0 20px 0; } }
+@media screen and (min-width: 1000px) { #primary-header { margin: 0 0 40px 0; } }
+
+#brand { color: #dddddd; }
+#brand:hover, #brand:active { color: white; }
+#brand hgroup { padding: 30px 0; margin: 0 10px; }
+@media screen and (min-width: 640px) { #brand hgroup { padding: 50px 0; } }
+#brand hgroup h1 { font-size: 24px; font-weight: 300; line-height: 22px; margin: 0 0 5px 0; }
+#brand hgroup h3 { font-size: 12px; font-weight: 300; letter-spacing: 1px; color: #aaaaaa; }
+
+#menu { display: none; padding-bottom: 0; display: inline; }
+#menu ul { text-align: center; margin: 0 20px 20px 20px; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); }
+@media screen and (min-width: 640px) { #menu ul { margin: -20px 240px 40px 240px; } }
+@media screen and (min-width: 1000px) { #menu ul { text-align: left; margin: 0; } }
+#menu ul li { border-bottom: 1px solid #222222; }
+#menu ul li a { padding: 8px 14px; color: #999999; font-weight: 400; font-size: 14px; font-family: "Merriweather", "Helvetica Neue", sans-serif; background: #262626; display: block; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -ms-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
+@media screen and (min-width: 1000px) { #menu ul li a { padding: 10px 14px; } }
+#menu ul li a.current, #menu ul li a:hover, #menu ul li a:active { background: #151515; color: #eeeeee; }
+
+.search { display: none; padding: 6px 0; font-size: 12px; background: white; *zoom: 1; }
+.search:before, .search:after { content: " "; display: table; }
+.search:after { clear: both; }
+.search input { border: 0; width: 70%; border-radius: 0; background: white; padding: 10px 15px; float: left; }
+.search button { background: #333333; border: 0; border-left: 10px solid white; color: #eeeeee; width: 30%; padding: 10px 14px; float: right; }
+
+footer#primary-footer { background: url("../images/darkgraynoise.png"); color: #999999; border-top: 5px solid #d5d5d5; -webkit-box-shadow: inset 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: inset 0px 0px 15px rgba(0, 0, 0, 0.25); *zoom: 1; z-index: 0; }
+footer#primary-footer:before, footer#primary-footer:after { content: " "; display: table; }
+footer#primary-footer:after { clear: both; }
+footer#primary-footer h4 { color: #eeeeee; font-weight: 700; font-size: 12px; padding-bottom: 10px; }
+footer#primary-footer a { color: #eeeeee; }
+
+div#footer-widgets { padding: 30px 20px; *zoom: 1; }
+div#footer-widgets:before, div#footer-widgets:after { content: " "; display: table; }
+div#footer-widgets:after { clear: both; }
+@media screen and (min-width: 640px) { div#footer-widgets { padding: 40px 80px; } }
+@media screen and (min-width: 1000px) { div#footer-widgets { padding: 40px 140px; } }
+
+.footer-widget { text-align: center; margin: 30px 0; }
+@media screen and (min-width: 640px) { .footer-widget { margin: 20px 0; } }
+
+#atop { color: #515151 !important; text-align: center; display: block; padding: 10px; z-index: 999; position: relative; font-size: 16px; margin-top: -13px; text-shadow: 1px 1px 0px white; }
