--- a/dev/sass/layouts/_320.sass
+++ b/dev/sass/layouts/_320.sass
@@ -1,6 +1,6 @@
 body
   background: url($lightgraynoise)
-  color: #444
+  color: #8c8c8c
   z-index: 0
 
 $mobilegutter: 10px
@@ -18,6 +18,9 @@ $mobilegutter: 10px
     padding: $mobilegutter*2
   +media($tablet2)
     padding: $mobilegutter*4
+  +media($desktop)
+    padding: $mobilegutter*4 0 $mobilegutter*4 0
+    width: 100%
 
 #wrap:after, #wrap:before 
   top: 100%
@@ -49,13 +52,17 @@ $mobilegutter: 10px
 .post
   +box-shadow(0px 0px 15px rgba(0,0,0,.07))
   background: url('../images/whitenoise.png')
-  //border-top: 3px solid $brandColor
   margin: 0 0 $mobilegutter 0
-  padding: 0 0 40px 0
+  padding: 0
   +media($tablet)
-    margin: 0 0 20px 0
+    padding: 0 0 10px 0
+    margin: 0 0 $mobilegutter*2 0
   +media($tablet2)
-    margin: 0 0 40px 0
+    padding: 0 0 20px 0
+    margin: 0 0 $mobilegutter*4 0
+    +box-shadow(0px 0px 35px rgba(0,0,0,.07))
+  +media($desktop)
+    @include outer-container
 
 .featured-image
   padding-bottom: 0
@@ -73,27 +80,33 @@ $mobilegutter: 10px
   +media($tablet2)
     padding: 0 140px
   header
-    text-align: center
+    text-align: center // EDIT EDIT EDIT EDIT EDIT
     margin: 40px 0 25px 0
     +clearfix
     +media($tablet)
       margin: 70px 0 35px 0
-    a h1
-      font-weight: 700
-      font-size: 22px
+    h1
+      font-weight: 400
+      font-size: 24px
       line-height: 30px
-      margin: 15px
+      margin: 15px 15px 20px 15px
       color: #434343
       +media($tablet)
-        margin-bottom: 10px
         line-height: 36px
         font-size: 26px
-    .date
-      font-size: 12px
-      font-weight: 400
-      font-family: $heading-font-family
-      display: block
-      color: #C3C9D2
+.meta-date
+  font-size: 14px
+  font-weight: 400
+  display: inline
+  color: #C3C9D2
+.meta-categories
+  font-size: 12px
+  a
+    color: #5a5a5a
+    font-weight: 700
+    &:hover
+      border-bottom: 1px dotted #5a5a5a
+
 .read-more
   display: block
   text-align: center
@@ -106,24 +119,3 @@ $mobilegutter: 10px
   +media($tablet)
     font-size: 16px
     margin: 20px 0 50px 0
-
-.post-details
-  font-size: 12px
-  color: darken(#C3C9D2, 10%)
-  text-shadow: none
-  margin: 0 auto
-  +clearfix
-  h5
-    color: darken(#C3C9D2, 40%)
-  i 
-    font-size: 16px
-  a
-    color: #C3C9D2
-    &:hover, &:active, &:focus
-      color: darken(#C3C9D2, 40%)
-  div
-    margin-bottom: 10px
-    +media($tablet)
-      @include span-columns(1)
-  .meta-comments
-  .meta-categories
