--- a/dev/sass/modules/_typography.sass
+++ b/dev/sass/modules/_typography.sass
@@ -10,7 +10,7 @@ $body-font-family    : "Merriweather", "Helvetica Neue", sans-serif !default
 $heading-font-family : "Merriweather", "Helvetica Neue", sans-serif !default
 $code-font-family    : "Monaco", monospace
 
-$vertical-rhythm     : 25px
+$vertical-rhythm     : 20px
 // base
 body
   font: $body-font-size $body-font-family
@@ -31,6 +31,7 @@ h1,h2,h3,h4,h5,h6
   font-family: $heading-font-family
   line-height: $golden-ratio + em
   text-shadow: 0px 1px 3px rgba(0,0,0,.1)
+  color: #5a5a5a
 
 // paragraphs
 p
@@ -43,17 +44,16 @@ p
     line-height: 26px
     font-weight: 400
   a
-    padding-bottom: 2px
-    border-bottom: 1px dotted lighten($linkBlue, 40%)
-  span.run-in
-    text-transform: capitalize
+    color: $linkBlue
     font-weight: 700
-    letter-spacing: 1px
+  b
+    color: #5a5a5a
+    font-weight: 700
 
 pre
   background: #eee
   padding: 20px
-  margin-bottom: $vertical-rhythm
+  margin: 10px 0 $vertical-rhythm+10 0
   overflow-x: auto
   white-space: pre
   color: #787878
