--- a/dev/sass/layouts/_footer.sass
+++ b/dev/sass/layouts/_footer.sass
@@ -25,7 +25,7 @@ div#footer-widgets
   margin: 30px 0
   +media($tablet)
     margin: 20px 0
-.textwidget
+//.textwidget
 
 #atop
   color: #515151 !important
