--- a/dev/sass/layouts/_navigation.sass
+++ b/dev/sass/layouts/_navigation.sass
@@ -39,6 +39,8 @@
   padding: 0
   +media($tablet2)
     display: block
+    width: 100%
+    height: 50px
     padding: 0 0 30px 0
   ul
     text-align: center
@@ -60,10 +62,9 @@
         padding: 8px 14px
         color: #999
         font-weight: 700
-        font-size: 12px
+        font-size: 14px
         font-family: $body-font-family
         background: #262626
-        text-transform: uppercase
         display: block
         +transition(all .5s)
         +media($tablet2)
