--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -749,13 +749,13 @@ body { background: url("../images/lightgraynoise.png"); color: #8c8c8c; z-index:
 #brand hgroup h3 { font-size: 12px; font-weight: 300; letter-spacing: 1px; color: #aaaaaa; }
 
 #menu { display: none; padding: 0; }
-@media screen and (min-width: 1000px) { #menu { display: block; padding: 0 0 30px 0; } }
+@media screen and (min-width: 1000px) { #menu { display: block; width: 100%; height: 50px; padding: 0 0 30px 0; } }
 #menu ul { text-align: center; margin: 0 20px 20px 20px; -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); }
 @media screen and (min-width: 640px) { #menu ul { margin: -20px 240px 40px 240px; } }
 @media screen and (min-width: 1000px) { #menu ul { -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0); box-shadow: 0px 0px 0px rgba(0, 0, 0, 0); text-align: left; margin: 0; display: inline; } }
 #menu ul li { border-bottom: 1px solid #222222; }
 @media screen and (min-width: 1000px) { #menu ul li { border: 0; display: inline; } }
-#menu ul li a { padding: 8px 14px; color: #999999; font-weight: 700; font-size: 12px; font-family: "Merriweather", "Helvetica Neue", sans-serif; background: #262626; text-transform: uppercase; display: block; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -ms-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
+#menu ul li a { padding: 8px 14px; color: #999999; font-weight: 700; font-size: 14px; font-family: "Merriweather", "Helvetica Neue", sans-serif; background: #262626; display: block; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -ms-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
 @media screen and (min-width: 1000px) { #menu ul li a { padding: 10px 14px; background: none; display: inline; } }
 #menu ul li a.current, #menu ul li a:hover, #menu ul li a:active { background: #151515; color: #eeeeee; }
 @media screen and (min-width: 1000px) { #menu ul li a.current, #menu ul li a:hover, #menu ul li a:active { background: none; } }
