Add comments markup

--- a/dev/sass/base/_color.sass
+++ b/dev/sass/base/_color.sass
@@ -1,9 +1,7 @@
 // colors
-$brandColor     : #222
+$brandColor     : #e55248
 $baseBlue       : #046380
-
 $baseGray       : #333
-
 $baseOrange     : #ff4747
-
-$linkBlue       : #08C
+$linkColor      : #e55248
+$linkBlue       : #1ba1e2
