--- a/dev/sass/layouts/_320.sass
+++ b/dev/sass/layouts/_320.sass
@@ -49,11 +49,11 @@ $mobilegutter: 10px
   margin-left: -44px
   z-index: 1
 
-.post
-  +box-shadow(0px 0px 15px rgba(0,0,0,.07))
+%content-box
   background: url('../images/whitenoise.png')
   margin: 0 0 $mobilegutter 0
   padding: 0
+  +box-shadow(0px 0px 15px rgba(0,0,0,.07))
   +media($tablet)
     padding: 0 0 10px 0
     margin: 0 0 $mobilegutter*2 0
@@ -64,6 +64,9 @@ $mobilegutter: 10px
   +media($desktop)
     @include outer-container
 
+.post
+  @extend %content-box
+
 .featured-image
   padding-bottom: 0
   overflow: hidden
@@ -73,6 +76,7 @@ $mobilegutter: 10px
       visibility: visible
 
 .post-content
+  border-left: 3px solid red
   padding: 0 20px
   +clearfix
   +media($tablet)
@@ -80,7 +84,7 @@ $mobilegutter: 10px
   +media($tablet2)
     padding: 0 140px
   header
-    text-align: center // EDIT EDIT EDIT EDIT EDIT
+    text-align: center
     margin: 40px 0 25px 0
     +clearfix
     +media($tablet)
@@ -113,9 +117,139 @@ $mobilegutter: 10px
   padding: 10px
   margin: 10px 0 40px 0
   font-size: 13px
-  color: lighten($linkBlue, 10%)
+  color: lighten($baseOrange, 20%)
   &:hover, &:active, &:focus
-    color: $linkBlue
+    color: $baseOrange
   +media($tablet)
     font-size: 16px
     margin: 20px 0 50px 0
+
+.post-navigation
+  position: relative
+  height: 60px
+  margin: 20px 0 10px 0
+  +media($tablet)
+    margin: 30px 0 20px 0
+  +media($tablet2)
+    margin: 50px 0 40px 0
+  +media($desktop)
+    margin-bottom: 50px
+    @include outer-container
+
+// pagination
+
+.pagination
+  position: relative
+  margin-top: 25px
+  padding: 15px 0
+  border-top: 1px solid #ddd
+  text-align: center
+  color: #ccc
+  +media($desktop)
+    padding: 20px 0 15px 0
+    margin-top: 40px
+  .current
+    color: $baseOrange
+    border-top: 2px solid $baseOrange
+    padding: 15px 4px 4px 4px
+    +media($desktop)
+      padding-top: 20px
+  a
+    color: #5a5a5a
+    padding: 2px 4px
+  +media($desktop)
+    @include outer-container
+
+%control-buttons
+  padding: 3px 8px 2px 8px !important
+  background: #333
+  position: absolute
+  border-radius: 4px
+  color: #ddd !important
+  &:hover, &:active, &:focus
+    background: #000
+    color: #fff
+  &.inactive
+    background: #ccc
+    color: #eee !important
+.page-previous
+  @extend %control-buttons
+  top: 10px
+  left: 0
+  +media($desktop)
+    top: 15px
+.page-next
+  @extend %control-buttons
+  top: 10px
+  right: 0
+  +media($desktop)
+    top: 15px
+
+
+// single post & comments
+
+.article-author
+  border-top: 1px solid #eee
+  padding: 30px 20px
+  margin-top: 20px
+  +media($tablet)
+    padding: 40px 80px 60px 80px
+  +media($tablet2)
+    padding: 40px 140px 60px 140px
+  h3
+    margin-bottom: 20px
+
+.comments-area
+  @extend %content-box
+  padding: 40px 20px
+  +clearfix
+  +media($tablet)
+    padding: 40px 80px
+  +media($tablet2)
+    padding: 80px 140px
+  h3
+    margin-bottom: 20px
+
+.comment-list
+  list-style-type: none
+  p
+    font-size: 13px
+  article figure
+    float: right
+    margin-left: 30px
+  header
+    font-size: 13px
+    padding: 0 0 10px 0
+    margin-bottom: 10px
+    border-bottom: 1px solid #dedede
+  h4
+    display: inline
+    font-size: 15px
+    span
+      background: #333
+      color: #ddd
+      padding: 4px 8px 3px 8px
+      margin-right: 5px
+      border-radius: 3px
+      font-size: 12px
+  li
+    margin-bottom: 20px
+    ol
+      list-style-type: none
+      margin-top: -20px
+      border-left: 3px solid #eee
+      li
+        padding-top: 20px
+        margin: 20px 0 20px 20px
+
+.awaiting-moderation
+  margin-top: 20px
+  font-style: italic
+  color: #bbb
+
+.comment-navigation
+  background: red
+  position: relative
+  display: block
+  height: 40px
+  +clearfix
