--- a/dev/sass/layouts/_navigation.sass
+++ b/dev/sass/layouts/_navigation.sass
@@ -20,7 +20,7 @@
   +media($tablet)
     padding: 40px 0
   +media($tablet2)
-    padding: 40px 0 20px 0
+    padding: 40px 0 40px 0
   hgroup
     h1
       font-size: 24px
@@ -37,7 +37,7 @@
 #menu
   display: none
   padding: 0
-  +media($tablet2)
+  +media($tablet)
     display: block
     width: 100%
     height: 50px
@@ -46,16 +46,16 @@
     text-align: center
     margin: 0 20px 20px 20px
     +box-shadow(0px 0px 15px rgba(0,0,0,.25))
+    //+media($tablet)
+      //margin: -20px 240px 40px 240px
     +media($tablet)
-      margin: -20px 240px 40px 240px
-    +media($tablet2)
       +box-shadow(0px 0px 0px rgba(0,0,0,0))
       text-align: left
       margin: 0
       display: inline
     li
       border-bottom: 1px solid #222
-      +media($tablet2)
+      +media($tablet)
         border: 0
         display: inline
       a
@@ -67,14 +67,14 @@
         background: #262626
         display: block
         +transition(all .5s)
-        +media($tablet2)
+        +media($tablet)
           padding: 10px 14px
           background: none
           display: inline
         &.current, &:hover, &:active
           background: #151515
           color: #eee
-          +media($tablet2)
+          +media($tablet)
             background: none
 
 .search
@@ -83,6 +83,8 @@
   font-size: 12px
   background: #fff
   //border-bottom: 4px solid #222
+  +media($desktop)
+    font-size: 14px
   +clearfix
   input
     border: 0
@@ -99,3 +101,5 @@
     width: 30%
     padding: 10px 14px
     float: right
+    &:hover, &:active, &:focus
+      background: #222
