--- a/dev/sass/modules/_typography.sass
+++ b/dev/sass/modules/_typography.sass
@@ -17,20 +17,17 @@ body
   line-height: $body-line-height
 a
   text-decoration: none
-  color: lighten($linkBlue, 10%)
+  color: $linkColor
   +transition(color .5s)
-  &:visited
-    color: #96B7E9
   &:hover
-    color: $linkBlue
-button, input
+    color: lighten($linkColor, 15%)
+button, input, textarea
   font-family: $body-font-family
 
 // headings
 h1,h2,h3,h4,h5,h6
   font-family: $heading-font-family
   line-height: $golden-ratio + em
-  text-shadow: 0px 1px 3px rgba(0,0,0,.1)
   color: #5a5a5a
 
 // paragraphs
@@ -44,8 +41,7 @@ p
     line-height: 26px
     font-weight: 400
   a
-    color: $linkBlue
-    font-weight: 700
+    font-weight: 400
   b
     color: #5a5a5a
     font-weight: 700
